[package]
name = "game"
version = "0.1.0"
edition = "2021"
resolver = "2"
build = "build.rs"

[dependencies]
jzon = "0.12.5"
glam = { version = "0.25.0" }
paste = "1"
libc-strftime = "0.2.0"
nanorand = "0.7.0"
bumpalo = { version = "3.14.0", features = ["boxed"] }
sdl2 = { version = "0.36.0" }
glium = { path = "../glium", features = [], default-features = false } 
imgui = { version  = "0.11.0", default-features = false }
hashlink = { version = "0.9.0" }
basis-universal = "0.3.1"
nanoserde = "0.1.37"
nohash-hasher = "=0.2.0"

[dependencies.smallvec]
version = "1.13.1"

[profile.dev.package."basis-universal-sys"]
opt-level = 3

[target.'cfg(target_os="android")'.dependencies]
android_log-sys = "0.3.0"
libc = "0.2.141"

[features]
pc = ["sdl2/bundled"]
release = []
mobile = []